<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_passenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/passenger_1_adult"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_0_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_0kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_0_kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_idr_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_0"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_5_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_5kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_5_kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_idr_250_000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_250_000"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_10_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_10kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_10_kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_idr_500.000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_500_000"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_20_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_20kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_20_kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_idr_1.000.000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_1_000_000"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_30_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_30kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_30_kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_idr_2.000.000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_2_000_000"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_40_kg"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/alto"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_40kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="40 Kg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_40_kg_idr_2.000.000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/idr_2_000_000"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</LinearLayout>