<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/cl_meal"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/img_meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="80dp"
        android:layout_height="60dp"/>
    <TextView
        android:id="@+id/tv_meal_name"
        app:layout_constraintTop_toTopOf="@id/img_meal"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/img_meal"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:text="@string/vegetarian_lasagna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_meal_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vegetarian_lasagna_with_tomato_sauce_nand_parsley"
        android:textColor="@color/neutral_700"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/cb_meal"
        app:layout_constraintStart_toEndOf="@id/img_meal"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_name" />
    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_description"
        app:layout_constraintStart_toEndOf="@id/img_meal"
        android:id="@+id/tv_meal_price"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:text="@string/idr_55_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_description"
        app:layout_constraintStart_toEndOf="@id/tv_meal_price"
        android:textColor="@color/neutral_700"
        android:textSize="10sp"
        android:text="/portion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/cb_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/img_meal"
        app:layout_constraintTop_toTopOf="@id/img_meal"
        android:layout_width="20dp"
        android:layout_height="20dp"/>
    <View
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_meal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alto" />
</androidx.constraintlayout.widget.ConstraintLayout>
